--- a/source/acknowledgement.tex
+++ b/source/acknowledgement.tex
@@ -4,4 +4,4 @@
 
 I would like to thank Dr. Recski Gábor and Dr. Kornai András for their constant support
 and help with my work. Without their guidance I would not have been able write this
-thesis.
+thesis. I also would like to thank Gémes Kinga for her excellent work. Last but not least I would like to thank my girlfriend for her love and support.
