--- a/source/diploma.tex
+++ b/source/diploma.tex
@@ -123,6 +123,8 @@
 	abstract,%
 	introduction,%
 	semparsing,%
+	applications,%
+	future,%
 	chapter1,%
 	chapter2,%
 	chapter3,%
@@ -161,6 +163,8 @@ aboveskip=10pt}
 \include{abstract}
 \include{introduction}
 \include{semparsing}
+\include{applications}
+\include{future}
 \include{acknowledgement}
 
 %\listoffigures\addcontentsline{toc}{chapter}{?br?k jegyz?ke}
