--- a/source/introduction.tex
+++ b/source/introduction.tex
@@ -68,7 +68,7 @@ We present a novel method for recognizing entailment using semantic
 graphs and apply it to the tasks:
 \begin{itemize}
     \item Knowledge base population task (KBP)
-    \item 2017 RepEval task on Natural language inference (NLI)
+    \item 2017 RepEval \footnote{\url{https://repeval2017.github.io/shared/}} task on Natural language inference (NLI)
     \item 2018 Semeval task on Machine
     Comprehension (MC).
 \end{itemize}
@@ -90,9 +90,8 @@ The structure of the paper is the following:
 \begin{itemize}
 	\item \textbf{Chapter \ref{chap:Introdu}} describes the short history and motivation of the NLP applications, it also gives a short summary about the objectives of the thesis, and the results.
 	\item \textbf{Chapter \ref{chap:semanticparsing}} gives a short introduction into the field of semantic parsing, and semantic models in general. It briefly explains the semantic parsing system \textbf{4lang}, and my process of automating the building of concept graphs, and the newly defined inference methods
-	\item \textbf{Chapter \ref{chap:comprehension}} describes the baseline approach to the Machine Comprehension task, which achieved an accuracy score of $68.3\%$.
-	\item \textbf{Chapter \ref{chap:deep}} gives an introduction into deep learning, focusing on the NLP tasks.
-	\item \textbf{Chapter \ref{chap:yuanfudao}} presents our experiments with the state-of-the art system \textbf{Yuanfudao}. Our preliminary results show a .5 percent improvement over the original system.
+	\item \textbf{Chapter \ref{chap:applications}} First describes the Knowledge base population task, and our method of yielding millions of new facts with high
+	accuracy (over 90\% according to manual evaluation). After the baseline approaches to the Natural language inference and Machine Comprehension task is discussed, where they achieved accuracy scores of $67.5\%$ and $68.3\%$, respectively. After that an introduction into deep learning is given, focusing on the NLP tasks. Finally, I present our experiments with the state-of-the art system \textbf{Yuanfudao}. Our preliminary results show a .5 percent improvement over the original system.
 	\item \textbf{Chapter \ref{chap:future}} summarizes our contributions and describes our ongoing/future work. It briefly discusses our plans for the follow-up, that was beyond the scope of this work.
 \end{itemize}
 
