--- a/source/semparsing.tex
+++ b/source/semparsing.tex
@@ -259,4 +259,4 @@ outperforms previous top systems by utilizing a simple similarity metric
 between \texttt{4lang} definitions of pairs of English words
 \cite{Recski:2016c}, this was the main idea of trying it in a different task with a different state-of-the-art system.
 
-In the next chapter, we will briefly discuss the machine comprehension challenge, and we will introduce our baseline method for solving it using our micro-service for automatically building concept graphs. After that we will present how it is applicable to an already working system.
+In the next chapter, I will briefly discuss the main challenges we chose for evaluation, and I will introduce our baselines methods for solving them using our micro-service for automatically building concept graphs. After that I will present how we made it applicable to an already working system.
