--- a/source/diploma.tex
+++ b/source/diploma.tex
@@ -123,7 +123,9 @@
 	abstract,%
 	introduction,%
 	semparsing,%
-	applications,%
+	kbp,%
+	nli,%
+	comprehension,%
 	future,%
 	chapter1,%
 	chapter2,%
@@ -163,12 +165,14 @@ aboveskip=10pt}
 \include{abstract}
 \include{introduction}
 \include{semparsing}
-\include{applications}
+\include{kbp}
+\include{nli}
+\include{comprehension}
 \include{future}
 \include{acknowledgement}
 
-%\listoffigures\addcontentsline{toc}{chapter}{?br?k jegyz?ke}
-%\listoftables\addcontentsline{toc}{chapter}{T?bl?zatok jegyz?ke}
+\listoffigures\addcontentsline{toc}{chapter}{List of figures}
+\listoftables\addcontentsline{toc}{chapter}{List of tables}
 
 \bibliography{mybib}
 \addcontentsline{toc}{chapter}{Bibliography}
