--- a/source/semparsing.tex
+++ b/source/semparsing.tex
@@ -3,7 +3,7 @@
 \label{chap:semanticparsing}
 %----------------------------------------------------------------------------
 
-In this chapter we first introduce applications, that use semantic models as an essential knowledge for their process. After, the theory and problems of semantic representation are discussed, and we briefly present the upsides and downsides of such representations. After that we go into details about distributional and graph based models, introducing the semantic parsing system \textbf{4lang}, which is the main focus of our work. Finally, our micro-services are discussed, built around the parser to highly automate the process of building concept graphs from raw input. An easy example of their usage is shown as well.
+In this chapter I first introduce applications, that use semantic models as an essential knowledge for their process. After, the theory and problems of semantic representation are discussed, and I briefly present the upsides and downsides of such representations. After that we go into details about distributional and graph based models, introducing the semantic parsing system \textbf{4lang}, which is the main focus of our work. Finally, our micro-services are discussed, built around the parser to highly automate the process of building concept graphs from raw input. An easy example of their usage is shown as well.
 
 When we use the word semantics, we usually refer to the interpretation of a linguistics unit (e.g. words, phrases, sentences, or whole texts) within the boundaries of a certain context. In many scientific fields e.g. philosophy, logic or biology the study of semantics is a highly researched task. While many NLP tasks like syntactic parsing, part-of-speech tagging, or even machine translation can be ignorant of the meaning of units, of what information they hold, there are also many other tasks that rely heavily on semantics.
 
@@ -22,14 +22,14 @@ Finding an absolute representation of semantics knowledge is among the most diff
 
 Representation of semantic knowledge with logical expressions (e.g. zero-order logic, prepositional logic) exists, and although many companies still rely on hand-crafted rules as a knowledge representation, they are very unpractical and have serious problems with scalability and automation. Distributional models have risen in popularity in recent years, where meaning is represented with multi-dimensional vectors. While vector based models can give us a uniform representation, they mostly lack interpretability in a way that we never really know what happens inside these models. Another issue is the choice of the dimension. Many algorithms exist for reducing the dimension of such vectors to a fixed number, but determining the correct length can be difficult. Rare words are a big issue as well, if a word in the training data is rarely present, distributional models will fail to handle them correctly.
 
-On the other hand graph based solutions have high level of interpretability, and handling rare words is one of their biggest advantage. But automating the process of building graphs is a challenging task, and using them as a sole solution for a semantic parsing task in most cases would come short, but in hybrid systems they make up for the weaknesses other models have.
+On the other hand, graph based solutions have high level of interpretability, and handling rare words is one of their biggest advantage. But automating the process of building graphs is a challenging task, and using them as a sole solution for a semantic parsing task in most cases would come short, but in hybrid systems they make up for the weaknesses other models have.
 
- In the next sections we will briefly discuss graph based models and distributional models, and because both of them have their merits, it is necessary to know the strengths and weaknesses of each one. Our work focuses around graph based solutions.
+ In the next sections I will briefly discuss graph based models and distributional models, and because both of them have their merits, it is necessary to know the strengths and weaknesses of each one. My work focuses around graph based solutions.
 
 \section{Distributional model}
 In the field of natural language processing one way of encoding semantic meaning is to use distributional models. They model semantic meaning as real-valued vectors. These vectors need to be constructed from a training data, and we can calculate similarity as cosine distance between the vectors.
 
-Let's have a look at these two sentences \textit{"The cat is walking in the bedroom"} and \textit{"A dog was running in a room"}. Words \textit{"dog"} and \textit{"cat"} have a similar semantic meaning, so if they are represented by vectors, and their cosine distance from each other is small, then we can vary the sentences \textit{"The dog is walking in the bedroom"} and \textit{"A cat was running in a room"} \cite{Bengio:2003}. These models take surrounding words into account and their goal is to obtain the meaning of the target word from their surroundings\cite{Jurafsky:2018}, and because \textit{"dog"} and \textit{"cat"} are close in vector space, they most likely will appear in the same context. This intuition helps us generalize sentences. These meanings are represented by vectors, called embeddings. One of the first models built around these intuitions were introduced by Bengio \cite{Bengio:2003}. 
+Let's have a look at these two sentences \textit{"The cat is walking in the bedroom"} and \textit{"A dog was running in a room"}. Words \textit{"dog"} and \textit{"cat"} have a similar semantic meaning, so if they are represented by vectors, and their cosine distance from each other is small, then we can vary the sentences \textit{"The dog is walking in the bedroom"} and \textit{"A cat was running in a room"} \cite{Bengio:2003}. These models take surrounding words into account and their goal is to obtain the meaning of the target word from their surroundings\cite{Jurafsky:2018}, and because \textit{"dog"} and \textit{"cat"} are close in vector space, they most likely will appear in the same context. This intuition helps us generalize sentences. These meanings are represented by vectors, called embeddings. One of the first models built around these intuitions were introduced in \cite{Bengio:2003}. 
 
 These word embeddings are used in basically all state-of-the art systems related to natural language processing applications. Mikolov \cite{Mikolov:2013c} showed that word embeddings can be applied for vector operations, like addition or subtraction, and these operations often result in meaningful representation. If we have example words "\textit{King}", "\textit{Man}", "\textit{Woman}", then the vector("King") - vector("Man") + vector("Woman") \ref{fig:vecs} will most likely result in vector that is close to vector("Queen") in the embedding space.
 
@@ -44,7 +44,7 @@ These word embeddings are used in basically all state-of-the art systems related
 
 The other issue is that we know very little about the structure of a multi-dimensional real-value vectors (for embeddings it can be from 300 up to 1000 dimension), so this makes it very hard to understand their structure, and exactly in what scenario they work, and the reason when they don't. So while most state-of-the art systems use word embeddings as a sole representation of meaning, and while it can be useful to encode meaning as vectors, so it can create connection from language specific and non-language specific data, we cannot deny the importance of having other semantics representations, such as graph-based ones. 
 
-In the majority of our work, we researched graph-based solutions, where we model the meaning of linguistics unit with graphs, and the whole process can be defined with graph transformations. Next I will briefly introduce graph based formalism starting with Abstract Meaning Representations (AMR) followed by the introduction of the \textbf{4lang} formalism, which will be the focus of the work, and I will go into details in the next section.
+In the majority of my work, I researched graph-based solutions, where I model the meaning of linguistics unit with graphs, and the whole process can be defined with graph transformations. Next, I will briefly introduce graph based formalism starting with Abstract Meaning Representations (AMR) followed by the introduction of the \textbf{4lang} formalism, which will be the focus of the thesis, and I will go into details in the next section.
 
 \section{Abstract Meaning Representations}
 Abstract Meaning Representation (AMR) was introduced by Banarescu\cite{Banarescu:2013} for representing the meaning of linguistic structures. They represent meaning as directed acyclic graphs (DAGs), that can be used to capture the meaning of whole sentences. In the past few years, AMR related works have appeared e.g. parsing applications, or annotated corpuses \cite{Banarescu:2013, OGorman2018AMRBT, DAC:2017}.
@@ -66,7 +66,7 @@ Nodes of AMR graphs can be represented various ways. Each node in the graph repr
 	\label{fig:amr}
 \end{figure*}
 
-In this paper we use the semantic parser \textbf{4lang} \cite{Recski:2018}, and unlike \textbf{4lang}, AMR handles wider range of phenomenas, mostly typical of English. AMR's usage is mostly biased towards English \cite{Palmer:2005}, while 4lang can be configured to handle multiple languages.
+In this paper I use the semantic parser \textbf{4lang} \cite{Recski:2018}, and unlike \textbf{4lang}, AMR handles wider range of phenomenas, mostly typical of English. AMR's usage is mostly biased towards English \cite{Palmer:2005}, while 4lang can be configured to handle multiple languages.
 
 \begin{figure*}[h!]
 	\centering
@@ -75,13 +75,13 @@ In this paper we use the semantic parser \textbf{4lang} \cite{Recski:2018}, and 
 	\label{fig:4langboy}
 \end{figure*}
 
-In the next section, we will go into details about the \textbf{4lang} formalism, and the parser itself. After that we will describe our method of measuring similarities between semantic graphs, and its usage on semantic related tasks.
+In the next section, I will go into details about the \textbf{4lang} formalism, and the parser itself. After that I will describe our method of measuring similarities between semantic graphs, and its usage on semantic related tasks.
 
 %----------------------------------------------------------------------------
 \section{4lang}
 \label{sec:4lang}
 %---
-The \textbf{4lang} system is in the main focus of our work, in this section we will discuss the formalism and possible applications. \textbf{4lang} also means the manually built dictionary of mapping more than 2000 words to graphs, this is described in \cite{Kornai:2013}. After discussing the main formalism of \textbf{4lang}, we will demonstrate our highly automated process of building concept graphs, that was achieved by wrapping \textbf{4lang} functionality in micro-services building a REST-API, followed by our baseline for the machine comprehension task.
+The \textbf{4lang} system is in the main focus of my work, this section discussed the formalism and possible applications. \textbf{4lang} also means the manually built dictionary of mapping more than 2000 words to graphs, this is described in \cite{Kornai:2013}. After discussing the main formalism of \textbf{4lang}, I will demonstrate my highly automated process of building concept graphs, that was achieved by wrapping \textbf{4lang} functionality in micro-services building a REST-API, followed by our baseline for the machine comprehension task.
 
 \subsection{The formalism}
 The \texttt{4lang} system of semantic representation \cite{Kornai:2015a}
@@ -185,7 +185,7 @@ Optionally, the \texttt{4lang} system allows us to \textit{expand}
 graphs, a process which unifies the graph with the definition graphs of
 each concept. The implementation is written in the \textbf{dict\_to\_4lang} module, that extends the functionality of the discussed \textbf{text\_to\_4lang} pipeline with dictionaries. \textbf{4lang} takes advantage of this, and implements the expansion step, which is essentially joining the definitions graphs to the main graph. This allows us to build a larger graph, that contains more information, and allows us to model the text better by simply adding the definition of words.
 
-Let us look at the example sentence \textit{"My poor wife"}, that results the graph shown in Figure \ref{fig:mypoor}. Looking at the definition of the word \textit{poor}: \textit{having very little money and not many possessions}, we can build a definition graph and essentially join the two graphs together. This can result us a better model if we are ready to take word definitions into account, and with this method we can have higher similarities between graphs whose sentences are also similar \footnote{Of course not every interpretation of \textit{"poor"} is related to money. It requires a higher level mechanism to handle these kind of occurrences, see more in \cite{Kornai:2018}.}. Doing this for every word in the sentence resulting in a merged graph Figure \ref{fig:mypoorexpanded}. If we look at the graph, it is clear that the expanded graph gives us much more accurate context and definition. Our work was built around the expanded graph, and we will see that how better it actually performs on a real task. This will be the main topic of the next chapter.
+Let us look at the example sentence \textit{"My poor wife"}, that results the graph shown in Figure \ref{fig:mypoor}. Looking at the definition of the word \textit{poor}: \textit{having very little money and not many possessions}, we can build a definition graph and essentially join the two graphs together. This can result us a better model if we are ready to take word definitions into account, and with this method we can have higher similarities between graphs whose sentences are also similar \footnote{Of course not every interpretation of \textit{"poor"} is related to money. It requires a higher level mechanism to handle these kind of occurrences, see more in \cite{Kornai:2018}.}. Doing this for every word in the sentence resulting in a merged graph Figure \ref{fig:mypoorexpanded}. If we look at the graph, it is clear that the expanded graph gives us much more accurate context and definition. My work was built around the expanded graph, and enhancing it with inference rules. We will see that how better it actually performs on a real task. This will be the main topic of Chapter \ref{nli}.
 
 \begin{figure}
 	\centering
@@ -203,8 +203,8 @@ Let us look at the example sentence \textit{"My poor wife"}, that results the gr
 
 
 \subsection{The service}
-At the beginning of our research we put a high emphasis on generating graphs from raw text with a highly automated method, so besides being an open-source software library, we made \texttt{4lang} accessible via a public
-REST API at \url{http://hlt.bme.hu/4lang}. We used the python language for implementing the service, and for the framework we used the flask\footnote{http://flask.pocoo.org/} package. The service generates input for the \texttt{text\_to\_4lang} module from the raw text input, then after processing it, returns a graph in \textbf{networkx multigraph}\footnote{\url{https://networkx.github.io/documentation/networkx-1.9.1/reference/classes.multigraph.html}} format to make it easy to visualize it on essentially any client side. Online demo of the service is available at \url{http://4lang.hlt.bme.hu}. 
+At the beginning of my research I put a high emphasis on generating graphs from raw text with a highly automated method, so besides being an open-source software library, one of my contribution consists of the accessibility of \texttt{4lang} via a public
+REST API at \url{http://hlt.bme.hu/4lang}. I used the python language for implementing the service, and for the framework I used the flask\footnote{http://flask.pocoo.org/} package. The service generates input for the \texttt{text\_to\_4lang} module from the raw text input, then after processing it, returns a graph in \textbf{networkx multigraph}\footnote{\url{https://networkx.github.io/documentation/networkx-1.9.1/reference/classes.multigraph.html}} format to make it easy to visualize it on essentially any client side. Online demo of the service is available at \url{http://4lang.hlt.bme.hu}. 
 The process is presented in Example \ref{lst:code}.
 \begin{center}
 	\begin{lstlisting}[caption={Demonstration of the service in python language.},language=python, label={lst:code}]
@@ -220,7 +220,7 @@ s_machines = r.json()['sentence']
 \end{center}
 
 
-The generated graph can be seen in Figure \ref{fig:service}. The code of the service is publicly available on Github\footnote{\url{https://github.com/adaamko/4lang}}. We can generate graphs with raw text by calling the service. Currently our service has multiple endpoints, with each of them representing different methods.
+The generated graph can be seen in Figure \ref{fig:service}. The code of the service is publicly available on Github\footnote{\url{https://github.com/adaamko/4lang}}. We can generate graphs with raw text by calling the service. Currently my service has multiple endpoints, with each of them representing different methods.
 If you are only interested in processing a single sentence, the following endpoints are available:
 
 \begin{figure}[!htb]
@@ -233,7 +233,7 @@ If you are only interested in processing a single sentence, the following endpoi
 \begin{itemize}
 	\item \textbf{/sendef} - Returns the graphs built from the sentence.
 	\item \textbf{/senexp} - Returns the graphs, where the word's definition has been added to the graph.
-	\item \textbf{/senabs} - Calling this function, we defined some rules, where we can build a more abstract graph using the definitions, this is more of a future work, we will briefly mention the algorithms and ideas behind it in the last chapter.
+	\item \textbf{/senabs} - Calling this function, with the help of simple inference rules, we can build more abstract graph that in certain scenarios can capture meaning in a different way than the expand function does. While the functionality is already implemented, it is yet to reach the results of the expansion method, so it can be described as a more of a future work, we will explain the method in Chapter \ref{chap:nli}.
 \end{itemize}
 You can get a word's definition by calling the defined endpoint:
 \begin{itemize}
@@ -241,7 +241,7 @@ You can get a word's definition by calling the defined endpoint:
 \end{itemize}
 For the machine comprehension task we defined a dedicated endpoint:
 \begin{itemize}
-	\item \textbf{/rally} - Returns a merged graph, where we merge a question sentence with an answer sentence. The main goal of this endpoint is that we can get a graph that can be explicitly compared with graph built from the passage text (it will be explained in the next chapter in details). 
+	\item \textbf{/rally} - Returns a merged graph, where we merge a question sentence with an answer sentence. The main goal of this endpoint is that we can get a graph that can be explicitly compared with graph built from the passage text (it will be explained in Chapter \ref{chap:comprehension } concretely). 
 \end{itemize}
 
 
@@ -259,4 +259,4 @@ outperforms previous top systems by utilizing a simple similarity metric
 between \texttt{4lang} definitions of pairs of English words
 \cite{Recski:2016c}, this was the main idea of trying it in a different task with a different state-of-the-art system.
 
-In the next chapter, I will briefly discuss the main challenges we chose for evaluation, and I will introduce our baselines methods for solving them using our micro-service for automatically building concept graphs. After that I will present how we made it applicable to an already working system.
+In the next chapter, I will briefly discuss the main challenges we chose for evaluation, mainly the task of KBP. After, I will introduce our baselines methods for solving the NLI and MC tasks using our micro-service for automatically building concept graphs. Finally I will present our mutual work, where we made it applicable to an already working system.
