--- a/source/acknowledgement.tex
+++ b/source/acknowledgement.tex
@@ -1,7 +1,12 @@
 %----------------------------------------------------------------------------
 \chapter*{Acknowledgement}\addcontentsline{toc}{chapter}{Acknowledgement}
 %----------------------------------------------------------------------------
+First of all, 
+I would like to express my deep gratitude to Dr. Recski Gábor for his guidance not just through this thesis, but through my whole master studies. I would like to thank him for introducing me to this interesting and amazing research field. He was always flexible and available for all my questions. I thank him for his valuable advices just about any topic imaginable.  
 
-I would like to thank Dr. Recski Gábor and Dr. Kornai András for their constant support
-and help with my work. Without their guidance I would not have been able write this
-thesis. I also would like to thank Gémes Kinga for her excellent work. Last but not least I would like to thank my girlfriend for her love and support.
+I am also thankful to Dr. Kornai András for his constant support
+and help with my work. I thank him for his energy to discuss any of problems I have.
+
+I also would like to thank to my colleague Gémes Kinga for her excellent work. 
+
+Finally, a special thanks to my girlfriend for her constant love and support. I thank her for her supporting me even through difficult situations. Without her, I would not have been able to write this thesis.
