--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -48,7 +48,6 @@ demonstration that inference based graph transformations are a powerful method f
 The thesis includes the improving of the 4lang system with further inference based rules and various metrics related to semantic graphs. Furthermore it will demonstrate
 the wrapping the 4lang software in Restful Wep Api microservices for easier usage.   
 
-The biggest result of this paper is that our system's preliminary results suggest that our system achieves a .5
-percentage point improvement on the Machine Comprehension task over the original state-of-the art system. 
+The biggest result of this paper is achieved on the Machine Comprehension task, where we integrated our method into a state-of-the art system. Our preliminary results suggest .5 percentage point improvement.
 \vfill
 
