--- a/source/declaration.tex
+++ b/source/declaration.tex
@@ -3,7 +3,7 @@
 %--------------------------------------------------------------------------------------
 \begin{center}
 \large
-\textbf{HALLGATÓsI NYILATKOZAT}\\
+\textbf{HALLGATÓI NYILATKOZAT}\\
 \end{center}
 
 Alulírott \emph{\vikszerzo}, szigorló hallgató kijelentem, hogy ezt a diplomatervet meg nem engedett segítség nélkül, saját magam készítettem, csak a megadott forrásokat (szakirodalom, eszközök stb.) használtam fel. Minden olyan részt, melyet szó szerint, vagy azonos értelemben, de átfogalmazva más forrásból átvettem, egyértelmûen, a forrás megadásával megjelöltem.
@@ -19,7 +19,7 @@ Budapest, \today
  \vspace*{1cm}
  \makebox[7cm]{\rule{6cm}{.4pt}}\\
  \makebox[7cm]{\emph{\vikszerzo}}\\
- \makebox[7cm]{hallgat?}
+ \makebox[7cm]{hallgató}
 \end{flushright}
 \thispagestyle{empty}
 
